--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Writing Samples | Kimberly Smalls</title>
+    <title>Resume | Kimberly Smalls</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <header>
+        <nav>
+            <!-- Your navigation -->
+        </nav>
+    </header>
+
+    <main class="resume-container">
+        <h1>My Resume</h1>
+        
+        <!-- Download button -->
+        <div class="resume-actions">
+            <a href="\Users\kimwr\OneDrive\Documents\Kimberly_C_Smalls.pdf" download class="download-btn">
+                Download PDF
+            </a>
+        </div>
+
+        <!-- Embedded PDF -->
+        <div class="pdf-viewer">
+            <iframe src="path/to/your-resume.pdf" 
+                    width="100%" 
+                    height="800px"
+                    title="Resume PDF">
+                <p>Your browser doesn't support PDFs. 
+                   <a href="path/to/your-resume.pdf">Download the PDF</a> instead.</p>
+            </iframe>
+        </div>
+    </main>
+
+    <footer>
+        <!-- Your footer -->
+    </footer>
+</body>
+</html>
