--- a/resume.html
+++ b/resume.html
@@ -25,12 +25,12 @@
 
         <!-- Embedded PDF -->
         <div class="pdf-viewer">
-            <iframe src="path/to/your-resume.pdf" 
+            <iframe src="\Users\kimwr\OneDrive\Documents\Kimberly_C_Smalls.pdf" 
                     width="100%" 
                     height="800px"
                     title="Resume PDF">
                 <p>Your browser doesn't support PDFs. 
-                   <a href="path/to/your-resume.pdf">Download the PDF</a> instead.</p>
+                   <a href="\Users\kimwr\OneDrive\Documents\Kimberly_C_Smalls.pdf">Download the PDF</a> instead.</p>
             </iframe>
         </div>
     </main>
