--- a/resume.html
+++ b/resume.html
@@ -18,19 +18,19 @@
         
         <!-- Download button -->
         <div class="resume-actions">
-            <a href="\Users\kimwr\OneDrive\Documents\Kimberly_C_Smalls.pdf" download class="download-btn">
+            <a href="kcsmalls/ksmalls-portfolio/Kimberly_C_Smalls.pdf" download class="download-btn">
                 Download PDF
             </a>
         </div>
 
         <!-- Embedded PDF -->
         <div class="pdf-viewer">
-            <iframe src="\Users\kimwr\OneDrive\Documents\Kimberly_C_Smalls.pdf" 
+            <iframe src="kcsmalls/ksmalls-portfolio/Kimberly_C_Smalls.pdf" 
                     width="100%" 
                     height="800px"
                     title="Resume PDF">
                 <p>Your browser doesn't support PDFs. 
-                   <a href="\Users\kimwr\OneDrive\Documents\Kimberly_C_Smalls.pdf">Download the PDF</a> instead.</p>
+                   <a href="kcsmalls/ksmalls-portfolio/Kimberly_C_Smalls.pdf">Download the PDF</a> instead.</p>
             </iframe>
         </div>
     </main>
