Added space between button and pdf viewer

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     </header>
 
     <main class="resume-container">
-        <h1>My Resume</h1>
+        <h1 style="text-align:center;">My Resume</h1>
         
         <!-- Download button -->
         <div class="resume-actions">
