Add photos and about page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">Kimberly Smalls</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html">Resume</a></li>
@@ -20,7 +19,7 @@
 
     <main>
         <section class="hero">
-            <h1>Technical Writer</h1>
+            <h1>Kimberly Smalls, Technical Writer</h1>
             <p>Creating clear, concise, and user-focused documentation</p>
             <a href="writing-samples.html" class="btn">View Writing Samples</a>
         </section>
