Fix format of about page

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -12,6 +12,7 @@
             <a href="index.html" class="logo">Kimberly Smalls</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="writing-samples.html">Writing Samples</a></li>
             </ul>
