--- a/about.html
+++ b/about.html
@@ -22,19 +22,18 @@
   <section class="about-section">
     <div class="about-container">
   <img src="ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
-  <div class="about-text">
-    <!-- your text here -->
-  </div>
-</div>
-
+    <div class="about-text">
     <h1>About me</h1>
     <p>I am a technical writer with experience creating clear, concise content for both hardware and software applications. I produce and manage documentation projects across Agile and Waterfall environments, ensuring high-quality deliverables that meet user needs and project goals.</p>
 
     <p>My background includes developing end-user documentation from requirements, specifications, and subject matter expert interviews, as well as applying a Docs-as-Code approach to streamline content creation and management. Skilled at multi-tasking, I have successfully overseen multiple documentation projects simultaneously while maintaining accuracy, consistency, and usability.</p>
 
-    <p>I also hold an inactive TS/SCI security clearance, reflecting my ability to work on projects requiring discretion and trust. See my writing portfolio:</p>
+    <p>I also hold an inactive TS/SCI security clearance, reflecting my ability to work on projects requiring discretion and trust. See my writing <a href="writing-samples.html">portfolio.</a></p>
 
-    <p><a href="writing-samples.html"></a></p>
+    </div>
+    </div>
+
+
   </section>
 
 </body>
