Fix broken image link

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <!-- About Section -->
   <section class="about-section">
     <div class="about-container">
-  <img src="ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
+  <img src="assets/ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
     <div class="about-text">
     <h1>About me</h1>
     <p>I am a technical writer with experience creating clear, concise content for both hardware and software applications. I produce and manage documentation projects across Agile and Waterfall environments, ensuring high-quality deliverables that meet user needs and project goals.</p>
