--- a/about.html
+++ b/about.html
@@ -19,22 +19,35 @@
     </header>
 
     <!-- About Section -->
-  <section class="about-section">
-    <div class="about-container">
-  <img src="assets/ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
-    <div class="about-text">
-    <h1>About me</h1>
-    <p>I am a technical writer with experience creating clear, concise content for both hardware and software applications. I produce and manage documentation projects across Agile and Waterfall environments, ensuring high-quality deliverables that meet user needs and project goals.</p>
+    <section class="about-section">
+        <div class="about-container">
+            <div class="profile-column">
+                <img src="assets/ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
+                <div class="email-widget">
+                    <a href="mailto:kimwrites17@gmail.com" class="email-button">
+                        <span class="email-icon">✉</span> Contact Me
+                    </a>
+                </div>
+                <div class="linkedin-widget">
+                    <a href="https://www.linkedin.com/in/kimberlysmalls" target="_blank" rel="noopener noreferrer" class="linkedin-button">
+                        <span class="linkedin-icon">in</span> LinkedIn
+                    </a>
+                </div>
+            </div>
+            <div class="about-text">
+                <h1>About me</h1>
+                <p>I am a technical writer with experience creating clear, concise content for both hardware and software applications. I produce and manage documentation projects across Agile and Waterfall environments, ensuring high-quality deliverables that meet user needs and project goals.</p>
 
-    <p>My background includes developing end-user documentation from requirements, specifications, and subject matter expert interviews, as well as applying a Docs-as-Code approach to streamline content creation and management. Skilled at multi-tasking, I have successfully overseen multiple documentation projects simultaneously while maintaining accuracy, consistency, and usability.</p>
+                <p>My background includes developing end-user documentation from requirements, specifications, and subject matter expert interviews, as well as applying a Docs-as-Code approach to streamline content creation and management. Skilled at multi-tasking, I have successfully overseen multiple documentation projects simultaneously while maintaining accuracy, consistency, and usability.</p>
 
-    <p>I also hold an inactive TS/SCI security clearance, reflecting my ability to work on projects requiring discretion and trust. See my writing <a href="writing-samples.html">portfolio.</a></p>
+                <p>I also hold an inactive TS/SCI security clearance, reflecting my ability to work on projects requiring discretion and trust. See my writing <a href="writing-samples.html">portfolio.</a></p>
+            </div>
+        </div>
+    </section>
 
-    </div>
-    </div>
-
-
-  </section>
+    <footer>
+        <p>&copy; 2024 Kimberly Smalls. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
