--- a/about.html
+++ b/about.html
@@ -25,12 +25,12 @@
                 <img src="assets/ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
                 <div class="email-widget">
                     <a href="mailto:kimwrites17@gmail.com" class="email-button">
-                        <img src="assets/email_icon.png" alt="Email Icon" class="email-icon"> Contact Me
+                        <img src="assets/email_icon.png" alt="Email Icon" class="email-icon">
                     </a>
                 </div>
                 <div class="linkedin-widget">
                     <a href="https://www.linkedin.com/in/kimberlysmalls" target="_blank" rel="noopener noreferrer" class="linkedin-button">
-                        <img src="assets/linkedin_icon.png" alt="LinkedIn Icon" class="linkedin-icon"> LinkedIn
+                        <img src="assets/linkedin_icon.png" alt="LinkedIn Icon" class="linkedin-icon">
                     </a>
                 </div>
             </div>
