--- a/about.html
+++ b/about.html
@@ -24,16 +24,12 @@
             <div class="profile-column">
                 <img src="assets/ksmalls_pink_photo.jpg" alt="Kimberly Smalls Photo" class="profile-img">
                 <div class="social-widgets">
-                    <div class="email-widget">
-                        <a href="mailto:kimwrites17@gmail.com" class="email-button">
-                            <img src="assets/email_icon.png" alt="Email Icon" class="email-icon">
-                        </a>
-                    </div>
-                    <div class="linkedin-widget">
-                        <a href="https://www.linkedin.com/in/kimberlysmalls" target="_blank" rel="noopener noreferrer" class="linkedin-button">
-                            <img src="assets/linkedin_icon.png" alt="LinkedIn Icon" class="linkedin-icon">
-                        </a>
-                    </div>
+                    <a href="mailto:kimwrites17@gmail.com" class="social-link" aria-label="Email Kimberly Smalls">
+                        <img src="assets/email_icon.png" alt="Email icon" class="social-icon">
+                    </a>
+                    <a href="https://www.linkedin.com/in/kimberlysmalls" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Kimberly Smalls on LinkedIn">
+                        <img src="assets/linkedin_icon.png" alt="LinkedIn icon" class="social-icon">
+                    </a>
                 </div>
             </div>
             <div class="about-text">
