Add footer to each page

--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
     </main>
 
     <footer>
-        <!-- Your footer -->
+        <p><b>&copy; 2024 Kimberly Smalls. All rights reserved.</b></p>
     </footer>
 </body>
 </html>
