--- a/writing-samples.html
+++ b/writing-samples.html
@@ -103,5 +103,9 @@
             });
         });
     </script>
+
+    <footer>
+        <p><b>&copy; 2024 Kimberly Smalls. All rights reserved.</b></p>
+    </footer>
 </body>
 </html>
