--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Kimberly Smalls. All rights reserved.</p>
+        <p><b>&copy; 2024 Kimberly Smalls. All rights reserved.</b></p>
     </footer>
 
 </body>
