--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Kimberly Smalls. All rights reserved.</p>
+        <p><b>&copy; 2024 Kimberly Smalls. All rights reserved.</b></p>
     </footer>
 </body>
 </html>
