--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <nav>
+            <a href="index.html" class="logo">Kimberly Smalls</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
