Change text color

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <main>
         <section class="hero">
-            <h1>Kimberly Smalls, Technical Writer</h1>
-            <p>Creating clear, concise, and user-focused documentation</p>
+            <h1 style="color:whitesmoke;">Kimberly Smalls, Technical Writer</h1>
+            <p style="color:whitesmoke;">Creating clear, concise, and user-focused documentation</p>
             <a href="writing-samples.html" class="btn">View Writing Samples</a>
         </section>
     </main>
 
     <footer>
-        <p><b>&copy; 2024 Kimberly Smalls. All rights reserved.</b></p>
+        <p style="color:whitesmoke;"><b>&copy; 2024 Kimberly Smalls. All rights reserved.</b></p>
     </footer>
 </body>
 </html>
