--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kimberly Smalls | Technical Writer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url('assets/office_desk.png'); background-repeat: no-repeat; background-position: center; background-attachment: fixed; background-size: cover;">
+<body style="background-image: url('assets/office_desk_bw.png'); background-repeat: no-repeat; background-position: center; background-attachment: fixed; background-size: cover;">
     <header>
         <nav>
             <ul>
