Removed second h1 line

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <main>
         <section class="hero">
-            <h1 style="color:black;">Kimberly Smalls</h1>
-            <h1 style="color:black;">Technical Writer</h1>
+            <h1 style="color:black;">Kimberly Smalls, Technical Writer</h1>
             <p style="color:black;">Creating clear, concise, and user-focused documentation</p>
             <a href="writing-samples.html" class="btn">View Writing Samples</a>
         </section>
