Fix background color

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section class="hero">
             <h1 style="background-color:lightgray;">Kimberly Smalls, Technical Writer</h1>
-            <p sstyle="background-color:lightgray;">Creating clear, concise, and user-focused documentation</p>
+            <p style="background-color:lightgray;">Creating clear, concise, and user-focused documentation</p>
             <a href="writing-samples.html" class="btn">View Writing Samples</a>
         </section>
     </main>
