--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Kimberly Smalls | Technical Writer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<style>
+h1   {color: black;}
+p    {color: black;}
+</style>
 <body style="background-image: url('assets/office_desk_bw.png'); background-repeat: no-repeat; background-position: center; background-attachment: fixed; background-size: cover;">
     <header>
         <nav>
