--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ p    {color: black;}
     <main>
         <section class="hero">
             <h1 style="background-color:lightgray;">Kimberly Smalls, Technical Writer</h1>
-            <p style="background-color:lightgray;">Creating clear, concise, and user-focused documentation</p>
+            <p style="background-color:lightgray;"><b>Creating clear, concise, and user-focused documentation</b></p>
             <a href="writing-samples.html" class="btn">View Writing Samples</a>
         </section>
     </main>
