Added my writing samples

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -27,54 +27,55 @@
 
         <section class="categories">
             <button class="category-btn active" data-category="all">All</button>
-            <button class="category-btn" data-category="api">API Documentation</button>
-            <button class="category-btn" data-category="tutorial">Tutorials</button>
             <button class="category-btn" data-category="guide">User Guides</button>
-            <button class="category-btn" data-category="reference">Reference Docs</button>
+            <button class="category-btn" data-category="release-notes">Release Notes</button>
+            <button class="category-btn" data-category="installation-integration">Installation and Integration Guide</button>
+            <button class="category-btn" data-category="maintenance">Maintenance Documentation</button>
         </section>
 
         <section class="samples-grid">
-            <article class="sample-card" data-category="api">
-                <span class="category">API Documentation</span>
-                <h2>REST API Reference</h2>
-                <p>Comprehensive REST API documentation including authentication, endpoints, request/response examples, and error handling.</p>
-                <a href="#" class="btn">View Sample</a>
-            </article>
-
-            <article class="sample-card" data-category="tutorial">
-                <span class="category">Tutorial</span>
-                <h2>Getting Started Guide</h2>
-                <p>Step-by-step tutorial for new users covering installation, configuration, and first-time setup of a developer tool.</p>
-                <a href="#" class="btn">View Sample</a>
-            </article>
-
             <article class="sample-card" data-category="guide">
-                <span class="category">User Guide</span>
-                <h2>Administrator Handbook</h2>
-                <p>Detailed user guide for system administrators covering deployment, maintenance, troubleshooting, and best practices.</p>
+                <span class="category">User Guides</span>
+                <h2>PeopleFluent iPaaS Customer Administration Console User's Guide</h2>
+                <p>User guide for customer administrators to manage their PeopleFluent iPaaS features.</p>
+                <a href="docs/PeopleFluent_iPaaS_Customer_Administration_Console_User's_Guide.pdf" class="btn">View Documentation</a>
+            </article>
+
+            <article class="sample-card" data-category="release-notes">
+                <span class="category">Release Notes</span>
+                <h2>PeopleFluent Talent Acquisition Business Intelligence March 2020 Release Notes</h2>
+                <p>Announces the March 2020 update to PeopleFluent Business Intelligence, highlighting new features and client impacts.</p>
+                <a href="docs/PeopleFluent_Talent_Acquisition_BI_March_2020_Release_Notes.pdf" class="btn">View Documentation</a>
+            </article>
+
+            <article class="sample-card" data-category="release-notes">
+                <span class="category">Release Notes</span>
+                <h2>PeopleFluent Talent Acquisition April 2020 US Release Notes</h2>
+                <p>Announces the April 2020 update to PeopleFluent Talent Acquisition, highlighting new features and client impacts.</p>
+                <a href="docs/PeopleFluent_Talent_Acquisition_April_2020_US_Release_Notes.pdf" class="btn">View Documentation</a>
+            </article>
+
+            <article class="sample-card" data-category="installation-integration">
+                <span class="category">Installation and Integration Guide</span>
+                <h2>FIPS Compliance</h2>
+                <p>Produced a nine-page usage guide explaining FIPS and FIPS 140-3 compliance for CloudBees CI, including how to enable FIPS mode, identify and configure compliant plugins, and understand known incompatibilities.<p>
+                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/fips-install-guide/fips-landing-page" class="btn">View Documentation</a>
+            </article>
+
+            <article class="sample-card" data-category="installation-integration">
+                <span class="category">Installation and Integration Guide</span>
+                <h2>CloudBees CI integration with CloudBees platform</h2>
+                <p>This is an overview section explaining CloudBees CI integration with the CloudBees platform.<p>
+                <a href="CloudBees CI integration with CloudBees platform" class="btn">View Documentation</a>
+            </article>
+
+            <article class="sample-card" data-category="maintenance">
+                <span class="category">Maintenance Documentation</span>
+                <h2>CloudBees User License Counting (ULC) System</h2>
+                <p>Documentation about the CloudBees ULC system which tracks and deduplicates user identities in CloudBees CI, ensuring accurate license counts while protecting privacy.</p>
                 <a href="#" class="btn">View Sample</a>
             </article>
 
-            <article class="sample-card" data-category="reference">
-                <span class="category">Reference Docs</span>
-                <h2>SDK Reference Manual</h2>
-                <p>Technical reference documentation for a software development kit including classes, methods, properties, and code examples.</p>
-                <a href="#" class="btn">View Sample</a>
-            </article>
-
-            <article class="sample-card" data-category="tutorial">
-                <span class="category">Tutorial</span>
-                <h2>Integration Walkthrough</h2>
-                <p>End-to-end tutorial demonstrating how to integrate a third-party service with detailed code samples and explanations.</p>
-                <a href="#" class="btn">View Sample</a>
-            </article>
-
-            <article class="sample-card" data-category="api">
-                <span class="category">API Documentation</span>
-                <h2>GraphQL Schema Docs</h2>
-                <p>GraphQL API documentation with schema definitions, query examples, mutations, and subscription handling.</p>
-                <a href="#" class="btn">View Sample</a>
-            </article>
         </section>
     </main>
 
