Fix broken link

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -73,7 +73,7 @@
                 <span class="category">Maintenance Documentation</span>
                 <h2>CloudBees User License Counting (ULC) System</h2>
                 <p>Documentation about the CloudBees ULC system which tracks and deduplicates user identities in CloudBees CI, ensuring accurate license counts while protecting privacy.</p>
-                <a href="#" class="btn">View Sample</a>
+                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/maintaining/user-license-counting" class="btn">View Documentation</a>
             </article>
 
         </section>
