Fix broken link

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -65,8 +65,8 @@
             <article class="sample-card" data-category="installation-integration">
                 <span class="category">Installation and Integration Guide</span>
                 <h2>CloudBees CI integration with CloudBees platform</h2>
-                <p>This is an overview section explaining CloudBees CI integration with the CloudBees platform.<p>
-                <a href="CloudBees CI integration with CloudBees platform" class="btn">View Documentation</a>
+                <p>An overview page explaining the CloudBees CI integration with the CloudBees platform.<p>
+                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/cloudbees-platform-integration/ci-cbp-integration" class="btn">View Documentation</a>
             </article>
 
             <article class="sample-card" data-category="maintenance">
