--- a/writing-samples.html
+++ b/writing-samples.html
@@ -29,7 +29,7 @@
             <button class="category-btn active" data-category="all">All</button>
             <button class="category-btn" data-category="guide">User Guides</button>
             <button class="category-btn" data-category="release-notes">Release Notes</button>
-            <button class="category-btn" data-category="installation-integration">Installation and Integration Guide</button>
+            <button class="category-btn" data-category="installation-integration">Installation and Integration Guides</button>
             <button class="category-btn" data-category="maintenance">Maintenance Documentation</button>
         </section>
 
@@ -56,14 +56,14 @@
             </article>
 
             <article class="sample-card" data-category="installation-integration">
-                <span class="category">Installation and Integration Guide</span>
+                <span class="category">Installation and Integration Guides</span>
                 <h2>FIPS Compliance</h2>
                 <p>Produced a nine-page usage guide explaining FIPS and FIPS 140-3 compliance for CloudBees CI, including how to enable FIPS mode, identify and configure compliant plugins, and understand known incompatibilities.<p>
                 <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/fips-install-guide/fips-landing-page" class="btn">View Documentation</a>
             </article>
 
             <article class="sample-card" data-category="installation-integration">
-                <span class="category">Installation and Integration Guide</span>
+                <span class="category">Installation and Integration Guides</span>
                 <h2>CloudBees CI integration with CloudBees platform</h2>
                 <p>An overview page explaining the CloudBees CI integration with the CloudBees platform.<p>
                 <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/cloudbees-platform-integration/ci-cbp-integration" class="btn">View Documentation</a>
