test opening to new tab

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -38,7 +38,7 @@
                 <span class="category">User Guides</span>
                 <h2>PeopleFluent iPaaS Customer Administration Console User's Guide</h2>
                 <p>User guide for customer administrators to manage their PeopleFluent iPaaS features.</p>
-                <a href="docs/PeopleFluent_iPaaS_Customer_Administration_Console_User's_Guide.pdf" class="btn">View Documentation</a>
+                <a href="docs/PeopleFluent_iPaaS_Customer_Administration_Console_User's_Guide.pdf" class="btn" target="_blank" rel="noopener noreferrer"> View Documentation </a>
             </article>
 
             <article class="sample-card" data-category="release-notes">
