Add new code to open samples to new tab in browser

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -45,35 +45,35 @@
                 <span class="category">Release Notes</span>
                 <h2>PeopleFluent Talent Acquisition Business Intelligence March 2020 Release Notes</h2>
                 <p>Announces the March 2020 update to PeopleFluent Business Intelligence, highlighting new features and client impacts.</p>
-                <a href="docs/PeopleFluent_Talent_Acquisition_BI_March_2020_Release_Notes.pdf" class="btn">View Documentation</a>
+                <a href="docs/PeopleFluent_Talent_Acquisition_BI_March_2020_Release_Notes.pdf" class="btn" target="_blank" rel="noopener noreferrer">View Documentation</a>
             </article>
 
             <article class="sample-card" data-category="release-notes">
                 <span class="category">Release Notes</span>
                 <h2>PeopleFluent Talent Acquisition April 2020 US Release Notes</h2>
                 <p>Announces the April 2020 update to PeopleFluent Talent Acquisition, highlighting new features and client impacts.</p>
-                <a href="docs/PeopleFluent_Talent_Acquisition_April_2020_US_Release_Notes.pdf" class="btn">View Documentation</a>
+                <a href="docs/PeopleFluent_Talent_Acquisition_April_2020_US_Release_Notes.pdf" class="btn" target="_blank" rel="noopener noreferrer">View Documentation</a>
             </article>
 
             <article class="sample-card" data-category="installation-integration">
                 <span class="category">Installation and Integration Guides</span>
                 <h2>FIPS Compliance</h2>
                 <p>Produced a nine-page usage guide explaining FIPS and FIPS 140-3 compliance for CloudBees CI, including how to enable FIPS mode, identify and configure compliant plugins, and understand known incompatibilities.<p>
-                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/fips-install-guide/fips-landing-page" class="btn">View Documentation</a>
+                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/fips-install-guide/fips-landing-page" class="btn" target="_blank" rel="noopener noreferrer">View Documentation</a>
             </article>
 
             <article class="sample-card" data-category="installation-integration">
                 <span class="category">Installation and Integration Guides</span>
                 <h2>CloudBees CI integration with CloudBees platform</h2>
                 <p>An overview page explaining the CloudBees CI integration with the CloudBees platform.<p>
-                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/cloudbees-platform-integration/ci-cbp-integration" class="btn">View Documentation</a>
+                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/cloudbees-platform-integration/ci-cbp-integration" class="btn" target="_blank" rel="noopener noreferrer">View Documentation</a>
             </article>
 
             <article class="sample-card" data-category="maintenance">
                 <span class="category">Maintenance Documentation</span>
                 <h2>CloudBees User License Counting (ULC) System</h2>
                 <p>Documentation about the CloudBees ULC system which tracks and deduplicates user identities in CloudBees CI, ensuring accurate license counts while protecting privacy.</p>
-                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/maintaining/user-license-counting" class="btn">View Documentation</a>
+                <a href="https://docs.cloudbees.com/docs/cloudbees-ci/latest/maintaining/user-license-counting" class="btn" target="_blank" rel="noopener noreferrer">View Documentation</a>
             </article>
 
         </section>
